--- a/variance.Rmd
+++ b/variance.Rmd
@@ -39,6 +39,8 @@ how "risky" a bet is?
   
 ## Theory {-}
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D77jyPILzR4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 The expected value summarizes the center of a random variable. However, we have seen 
 that two random variables can have the same center but very different distributions. 
 
